force-app/main/default/objects/Quote__c/fields/D_O_Retention_Modifier_Retention__c.field-meta.xml
<CustomField>
    <fullName>D_O_Retention_Modifier_Retention__c</fullName>
    <defaultValue>&quot;$10,000&quot;</defaultValue>
    <inlineHelpText>$5,000	1.250
$7,500:	1.20
$10,000:	1.150
$15,000:	1.100
$20,000:	1.050
$25,000: 	1.000
$35,000:	0.950
$50,000:	0.925
$75,000:	0.885
$100,000: 0.835
$150,000: 0.815
$200,000: 0.795
$250,000: 0.775
$500,000: 0.700</inlineHelpText>
    <label>D&amp;O Retention Modifier (Retention)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$5,000</fullName>
            </value>
            <value>
                <fullName>$7,500</fullName>
            </value>
            <value>
                <fullName>$10,000</fullName>
                <default>true</default>
                <label>$10,000</label>
            </value>
            <value>
                <fullName>$15,000</fullName>
            </value>
            <value>
                <fullName>$20,000</fullName>
            </value>
            <value>
                <fullName>$25,000</fullName>
            </value>
            <value>
                <fullName>$35,000</fullName>
            </value>
            <value>
                <fullName>$50,000</fullName>
            </value>
            <value>
                <fullName>$75,000</fullName>
            </value>
            <value>
                <fullName>$100,000</fullName>
            </value>
            <value>
                <fullName>$150,000</fullName>
            </value>
            <value>
                <fullName>$200,000</fullName>
            </value>
            <value>
                <fullName>$250,000</fullName>
            </value>
            <value>
                <fullName>$500,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>