force-app/main/default/objects/Quote__c/fields/Debt_to_Equity_Position_Adj__c.field-meta.xml
<CustomField>
    <fullName>Debt_to_Equity_Position_Adj__c</fullName>
    <formula>( Debt_to_Equity_Position_factor__c * D_O_Base_Rate__c ) - D_O_Base_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Gov. &amp; Board Comp. (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>