force-app/main/default/objects/Quote__c/fields/Debt_to_Equity_Position_factor__c.field-meta.xml
<CustomField>
    <fullName>Debt_to_Equity_Position_factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. Above average:	0.9
B. Average:	1 - 1.1
C. Below average: 	1.1 - 1.75</inlineHelpText>
    <label>Corporate Governance (Factor)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>