force-app/main/default/objects/Quote__c/fields/Deriv_Demand__c.field-meta.xml
<CustomField>
    <fullName>Deriv_Demand__c</fullName>
    <formula>CASE(TEXT( Deriv_Demand_Investigation_Cost__c),&quot;$0&quot;, 0, &quot;$100,000&quot;, 100000, &quot;$125,000&quot;, 125000, &quot;$150,000&quot;, 150000, &quot;$200,000&quot;, 200000, &quot;$250,000&quot;, 250000, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deriv Demand Investigation Cost Val</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>