force-app/main/default/objects/Quote__c/fields/Deriv_Demand_Investigation_Cost_Adj__c.field-meta.xml
<CustomField>
    <fullName>Deriv_Demand_Investigation_Cost_Adj__c</fullName>
    <formula>( D_O_Retention_Adjusted_Rate__c *  Deriv_Demand_Investigation_Cost_Factor__c ) - D_O_Retention_Adjusted_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deriv Demand Investigation Cost (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>