force-app/main/default/objects/Quote__c/fields/Deriv_Demand_Investigation_Cost_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>Deriv_Demand_Investigation_Cost_Adj_New__c</fullName>
    <label>Deriv Demand Investigation Cost (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>