force-app/main/default/objects/Quote__c/fields/Deriv_Demand_Investigation_Cost_Factor__c.field-meta.xml
<CustomField>
    <fullName>Deriv_Demand_Investigation_Cost_Factor__c</fullName>
    <defaultValue>1.05</defaultValue>
    <inlineHelpText>No: 1.0
Yes: 1.05 - 1.10</inlineHelpText>
    <label>Deriv Demand Investigation Cost (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>