force-app/main/default/objects/Quote__c/fields/Directors_Officers__c.field-meta.xml
<CustomField>
    <fullName>Directors_Officers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Directors &amp; Officers</label>
    <type>Checkbox</type>
</CustomField>