force-app/main/default/objects/Quote__c/fields/Directors_Officers_Employment_Practice__c.field-meta.xml
<CustomField>
    <fullName>Directors_Officers_Employment_Practice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Directors &amp; Officers/Employment Practice</label>
    <type>Checkbox</type>
</CustomField>