force-app/main/default/objects/Quote__c/fields/Directors_Officers_Fiduciary__c.field-meta.xml
<CustomField>
    <fullName>Directors_Officers_Fiduciary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Directors Officers Fiduciary</label>
    <type>Checkbox</type>
</CustomField>