force-app/main/default/objects/Quote__c/fields/Earnings_Trend_Adj__c.field-meta.xml
<CustomField>
    <fullName>Earnings_Trend_Adj__c</fullName>
    <formula>( Earnings_Trend_Factor__c * D_O_Base_Rate__c ) - D_O_Base_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earnings Trend (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>