force-app/main/default/objects/Quote__c/fields/Earnings_Trend_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>Earnings_Trend_Adj_New__c</fullName>
    <label>Earnings Trend (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>