force-app/main/default/objects/Quote__c/fields/Earnings_Trend_Factor__c.field-meta.xml
<CustomField>
    <fullName>Earnings_Trend_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. Above Average:	.90
B. Average, or company is &lt;2 years old:	1.0
C. Below Average: 	1.1 - 1.5</inlineHelpText>
    <label>Earnings Trend (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>