force-app/main/default/objects/Quote__c/fields/Endorsement_10__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_10__c</fullName>
    <label>Endorsement 10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ML_Endorsements</valueSetName>
    </valueSet>
</CustomField>