force-app/main/default/objects/Quote__c/fields/Endorsement_Summary__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Summary__c</fullName>
    <formula>TEXT(Endorsement_1__c) &amp;&quot;; &quot;&amp; TEXT (Endorsement_2__c) &amp;&quot;; &quot;&amp; TEXT (Endorsement_3__c) &amp;&quot;; &quot;&amp; TEXT (Endorsement_4__c) &amp;&quot;; &quot;&amp; TEXT (Endorsement_5__c) &amp;&quot;; &quot;&amp;  TEXT (Endorsement_6__c) &amp;&quot;; &quot;&amp;  TEXT (Endorsement_7__c) &amp;&quot;; &quot;&amp; TEXT (Endorsement_8__c) &amp;&quot;; &quot;&amp;  TEXT(Endorsement_9__c) &amp;&quot;; &quot;&amp; TEXT(Endorsement_10__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endorsement Summary</label>
    <type>Text</type>
</CustomField>