force-app/main/default/objects/Quote__c/fields/Endorsements__c.field-meta.xml
<CustomField>
    <fullName>Endorsements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Endorsements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>