force-app/main/default/objects/Quote__c/fields/EPL_Primary_Underlying_Quality_Adj__c.field-meta.xml
<CustomField>
    <fullName>EPL_Primary_Underlying_Quality_Adj__c</fullName>
    <defaultValue>0</defaultValue>
    <label>EPL Primary/Underlying Quality (Adj)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>