force-app/main/default/objects/Quote__c/fields/ePlace_Fee__c.field-meta.xml
<CustomField>
    <fullName>ePlace_Fee__c</fullName>
    <label>ePlace Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$250</fullName>
                <default>true</default>
                <label>$250</label>
            </value>
            <value>
                <fullName>$0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>