force-app/main/default/objects/Quote__c/fields/EPLI_3rd_Party_Exposure_Adj__c.field-meta.xml
<CustomField>
    <fullName>EPLI_3rd_Party_Exposure_Adj__c</fullName>
    <formula>( EPLI_Base_Rate__c *  EPLI_3rd_Party_Exposure_Factor__c ) - EPLI_Base_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPLI 3rd Party Exposure (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>