force-app/main/default/objects/Quote__c/fields/EPLI_3rd_Party_Exposure_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>EPLI_3rd_Party_Exposure_Adj_New__c</fullName>
    <label>EPLI 3rd Party Exposure (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>