force-app/main/default/objects/Quote__c/fields/EPLI_3rd_Party_Exposure_Factor__c.field-meta.xml
<CustomField>
    <fullName>EPLI_3rd_Party_Exposure_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. Nominal	1.0
B. Limited customer/vendor interaction	1.0 - 1.2
C. Significant customer/vendor interaction	1.2 - 1.4</inlineHelpText>
    <label>EPLI 3rd Party Exposure (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>