force-app/main/default/objects/Quote__c/fields/EPLI_Annual_Performance_Reviews_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Annual_Performance_Reviews_Adj_New__c</fullName>
    <label>EPLI Annual Performance Reviews (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>