force-app/main/default/objects/Quote__c/fields/EPLI_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Base_Rate__c</fullName>
    <formula>IF ( Opportunity__r.Number_of_Employees__c &lt;= 10 , 3000, 
IF ( AND ( Opportunity__r.Number_of_Employees__c &gt; 10, Opportunity__r.Number_of_Employees__c &lt;= 25), 3500, 
IF ( AND ( Opportunity__r.Number_of_Employees__c &gt; 25, Opportunity__r.Number_of_Employees__c &lt;= 50), 5000, 
IF ( AND ( Opportunity__r.Number_of_Employees__c &gt; 50, Opportunity__r.Number_of_Employees__c &lt;= 75), 7000, 
IF ( AND ( Opportunity__r.Number_of_Employees__c &gt; 75, Opportunity__r.Number_of_Employees__c &lt;= 100), 9000, 
IF ( AND ( Opportunity__r.Number_of_Employees__c &gt; 100, Opportunity__r.Number_of_Employees__c &lt;= 150), 10000 + (60*(Opportunity__r.Number_of_Employees__c-100)), 
IF ( AND ( Opportunity__r.Number_of_Employees__c &gt; 150, Opportunity__r.Number_of_Employees__c &lt;= 200), 10000 + (60*(Opportunity__r.Number_of_Employees__c-100)), 
IF ( AND ( Opportunity__r.Number_of_Employees__c &gt; 200, Opportunity__r.Number_of_Employees__c &lt;= 300), 10000 + (60*(Opportunity__r.Number_of_Employees__c-100)), 
IF ( AND ( Opportunity__r.Number_of_Employees__c &gt; 300, Opportunity__r.Number_of_Employees__c &lt;= 400), 10000 + (60*(Opportunity__r.Number_of_Employees__c-100)), 
IF ( AND ( Opportunity__r.Number_of_Employees__c &gt; 400, Opportunity__r.Number_of_Employees__c &lt;= 500), 10000 + (60*(Opportunity__r.Number_of_Employees__c-100)), 
IF ( AND ( Opportunity__r.Number_of_Employees__c &gt; 500, Opportunity__r.Number_of_Employees__c &lt;= 750), 15000 + (47.5*(Opportunity__r.Number_of_Employees__c-100)), 
IF ( AND ( Opportunity__r.Number_of_Employees__c &gt; 750, Opportunity__r.Number_of_Employees__c &lt;= 1000), 20500 + (39*(Opportunity__r.Number_of_Employees__c-100)),
IF ( Opportunity__r.Number_of_Employees__c &gt;= 1001, 21500 + (38*(Opportunity__r.Number_of_Employees__c-100)), 0 
)))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPLI Base Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>