force-app/main/default/objects/Quote__c/fields/EPLI_Base_Rate_New__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Base_Rate_New__c</fullName>
    <label>EPLI Base Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>