force-app/main/default/objects/Quote__c/fields/EPLI_Class_Of_Business_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Class_Of_Business_Adj_New__c</fullName>
    <label>EPLI Class Of Business (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>