force-app/main/default/objects/Quote__c/fields/EPLI_Class_Of_Business_Factor__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Class_Of_Business_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. Low Risk: low salaries, highly regulated industry, etc. .90 - 1.0
B. Average Risk 1.0 - 1.2
C. High Risk: high salaried employees, complex compensation package, contracted work 1.3 - 1.75</inlineHelpText>
    <label>EPLI Class Of Business (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>