force-app/main/default/objects/Quote__c/fields/EPLI_Debt_to_Equity_Adj__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Debt_to_Equity_Adj__c</fullName>
    <formula>(  EPLI_Base_Rate__c  *  EPLI_Debt_to_Equity_Factor__c ) - EPLI_Base_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPLI Debt to Equity (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>