force-app/main/default/objects/Quote__c/fields/EPLI_Debt_to_Equity_Factor__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Debt_to_Equity_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. Above average	.90
B. Average	1.0
C. Below average	1.1</inlineHelpText>
    <label>EPLI Debt to Equity (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>