force-app/main/default/objects/Quote__c/fields/EPLI_Employee_Handbook_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Employee_Handbook_Adj_New__c</fullName>
    <label>EPLI Employee Handbook (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>