force-app/main/default/objects/Quote__c/fields/EPLI_Employee_Handbook_Factor__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Employee_Handbook_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. Yes	.85 - 1.0
B. No	1.1 - 1.2</inlineHelpText>
    <label>EPLI Employee Handbook (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>