force-app/main/default/objects/Quote__c/fields/EPLI_Full_Time_HR_Pro_Adj__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Full_Time_HR_Pro_Adj__c</fullName>
    <formula>(  EPLI_Base_Rate__c *  EPLI_Full_Time_HR_Pro_Factor__c ) - EPLI_Base_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPLI Full Time HR Pro (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>