force-app/main/default/objects/Quote__c/fields/EPLI_Full_Time_HR_Pro_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Full_Time_HR_Pro_Adj_New__c</fullName>
    <label>EPLI Full Time HR Pro (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>