force-app/main/default/objects/Quote__c/fields/EPLI_Immigration_Violation_Limit__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Immigration_Violation_Limit__c</fullName>
    <label>EPLI Immigration Violation (Limit)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$500,000</fullName>
            </value>
            <value>
                <fullName>$1,000,000</fullName>
                <default>true</default>
                <label>$1,000,000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>