force-app/main/default/objects/Quote__c/fields/EPLI_Limit_Modifier_Adj__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Limit_Modifier_Adj__c</fullName>
    <formula>( EPLI_Risk_Adjusted_Rate__c *
(
IF ( ISPICKVAL ( EPLI_Limit_Modifier_Limit__c , &quot;$500,000&quot;), 0.85,
IF ( ISPICKVAL ( EPLI_Limit_Modifier_Limit__c , &quot;$1,000,000&quot;), 1.00,
IF ( ISPICKVAL ( EPLI_Limit_Modifier_Limit__c , &quot;$2,000,000&quot;), 1.70,
IF ( ISPICKVAL ( EPLI_Limit_Modifier_Limit__c , &quot;$3,000,000&quot;), 2.25,
IF ( ISPICKVAL ( EPLI_Limit_Modifier_Limit__c , &quot;$4,000,000&quot;), 2.70,
IF ( ISPICKVAL ( EPLI_Limit_Modifier_Limit__c , &quot;$5,000,000&quot;), 3.15, 0 )))))))
- EPLI_Risk_Adjusted_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPLI Limit Modifier (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>