force-app/main/default/objects/Quote__c/fields/EPLI_Limit_Modifier_Limit__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Limit_Modifier_Limit__c</fullName>
    <defaultValue>&quot;$1,000,000&quot;</defaultValue>
    <inlineHelpText>$500,000	        0.85
$1,000,000	$500K rate * 0.5 or 0.6 if CA</inlineHelpText>
    <label>EPLI Limit Modifier (Limit)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$500,000</fullName>
            </value>
            <value>
                <fullName>$1,000,000</fullName>
                <default>true</default>
                <label>$1,000,000</label>
            </value>
            <value>
                <fullName>$2,000,000</fullName>
            </value>
            <value>
                <fullName>$3,000,000</fullName>
            </value>
            <value>
                <fullName>$4,000,000</fullName>
                <isActive>false</isActive>
                <label>$4,000,000</label>
            </value>
            <value>
                <fullName>$5,000,000</fullName>
                <isActive>false</isActive>
                <label>$5,000,000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>